k8s/api-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  ports:
    - protocol: TCP
      port: 3000
  selector:
    app: api-gateway
